RESOLVED FIXED48948
Crash when setting context font to bad value
https://bugs.webkit.org/show_bug.cgi?id=48948
Summary Crash when setting context font to bad value
Simon Fraser (smfr)
Reported 2010-11-03 13:39:49 PDT
Created attachment 72864 [details] Testcase This crashes: var ctx = document.getElementById("canvas").getContext("2d"); ctx.font = "font-family: Helvetica; font-size: 48pt; font-color: #000000"; ctx.fillText("Hello world", 10, 200);
Attachments
Testcase (521 bytes, text/html)
2010-11-03 13:39 PDT, Simon Fraser (smfr)
no flags
Patch (3.25 KB, patch)
2010-11-03 13:54 PDT, Simon Fraser (smfr)
sullivan: review+
Simon Fraser (smfr)
Comment 1 2010-11-03 13:40:11 PDT
Simon Fraser (smfr)
Comment 2 2010-11-03 13:54:15 PDT
Simon Fraser (smfr)
Comment 3 2010-11-03 14:00:08 PDT
Note You need to log in before you can comment on or make changes to this bug.