2010-11-03  Simon Fraser  <simon.fraser@apple.com>

Reviewed by John Sullivan.

        Crash when setting context font to bad value
        https://bugs.webkit.org/show_bug.cgi?id=48948

        Null-check the CSSValue passed to CSSStyleSelector::applyPropertyToStyle(),
        since it may be null if the style declaration does not contain a value
        for the 'font' property.

        Test: fast/canvas/invalid-set-font-crash.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyPropertyToStyle):

Canonical link: https://commits.webkit.org/61759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71266 268f45cc-cd09-0410-ab3c-d52691b4dbfc